src/objects/CD_PSL__c.object
<CustomObject>
    <fields>
        <fullName>CD_Category_IOD_OUT__c</fullName>
        <formula>CD_Category__r.Name</formula>
        <label>CD Category IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>CD_Category__c</referenceTo>
        <relationshipName>CD_PSL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSL_ID__c</fullName>
        <displayFormat>PSL-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PSL_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CD_PSL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <formula>Supplier_Name__r.Oracle_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliername__c</fullName>
        <label>Suppliername</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CD_Preferred Supplier List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CD_Category__c</columns>
        <columns>Supplier_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Selected_PSL</fullName>
        <columns>CD_Category__c</columns>
        <columns>Supplier_Number__c</columns>
        <columns>Supplier_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Selected PSL</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>CD PSL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Supplier List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>